mullvad-update/src/snapshots/mullvad_update__version__test__rollout_display.snap
---
source: mullvad-update/src/version.rs
expression: "&string_reprs"
---
-0 => 0%
0 => 0%
0.00000011920929 => 1%
0.33333334 => 34%
0.9999999 => 100%
1 => 100%
