mullvad-update/src/snapshots/mullvad_update__version__test__rollout_threshold_uniqueness-2.snap
---
source: mullvad-update/src/version.rs
expression: "rollout_threshold(seed, v20255)"
---
0.68220514
