mullvad-update/src/snapshots/mullvad_update__version__test__rollout_threshold_uniqueness.snap
---
source: mullvad-update/src/version.rs
expression: "rollout_threshold(seed, v20254)"
---
0.98061204
