mullvad-update/src/snapshots/mullvad_update__version__test__version_unsupported_filtering.snap
---
source: mullvad-update/src/version.rs
expression: info
snapshot_kind: text
---
stable:
  version: "2026.10"
  urls: []
  size: 0
  changelog: ""
  sha256:
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
    - 0
beta: ~
